# mcpservers

./: .gitignore  README.md  SECURITY.md
.claude/: settings.local.json
standalone/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
standalone/src/: __init__.py  config.py  logging_utils.py  main.py
standalone/src/client/: __init__.py  exceptions.py  papi_client.py
standalone/src/modules/: __init__.py  base_module.py  integration_tools.py  issues_module.py  lookups_module.py  reference_module.py  slack_tools.py  system_module.py
xsiam/: Dockerfile  README.md  integration.py  integration.yml  requirements.txt
xsiam/inventory/: correlation_rules.json  dashboards.json  datamodels.md  extract_dataset_fields.py  extract_xql_queries.py  xdr_data_schema.md
