[tool.poetry]
name = "cortex-mcp-standalone"
version = "1.0.0"
description = "Consolidated MCP server for Palo Alto Networks Cortex XSIAM/XDR operations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "*"
httpx = "*"
pydantic = "*"
pydantic-settings = "*"
python-json-logger = "*"
uvicorn = "*"
starlette = "*"
python-dotenv = "*"
chromadb = "*"
google-generativeai = "*"
pyyaml = "*"
python-dateutil = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
black = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
